WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311585
Tiktok.com: Unable to drag volume slider in video's media control.
https://bugs.webkit.org/show_bug.cgi?id=311585
Summary
Tiktok.com: Unable to drag volume slider in video's media control.
joanne_pan2
Reported
2026-04-06 12:29:29 PDT
Dupe of
rdar://171185607
for tracking purposes, since the original radar had Facebook and TikTok categorized together, and would need 2 separate fixes.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-06 12:29:34 PDT
<
rdar://problem/174179805
>
joanne_pan2
Comment 2
2026-04-16 14:07:50 PDT
<
rdar://problem/174179805
>
joanne_pan2
Comment 3
2026-04-16 14:17:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62924
joanne_pan2
Comment 4
2026-04-20 20:56:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63194
EWS
Comment 5
2026-04-23 13:39:06 PDT
Committed
311889@main
(0d62f64ce604): <
https://commits.webkit.org/311889@main
> Reviewed commits have been landed. Closing PR #63194 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug