Source/WebCore/page/QuirksData.h
@@ -51,6 +51,7 @@ struct QuirksData {
     bool isOutlook : 1 { false };
     bool isSoundCloud : 1 { false };
     bool isThesaurus : 1 { false };
+    bool isTikTok : 1 { false };
     bool isVimeo : 1 { false };
     bool isWalmart : 1 { false };
     bool isWebEx : 1 { false };
@@ -295,7 +296,7 @@ struct QuirksData {
     enum class ShouldDispatchSimulatedMouseEvents : uint8_t {
         Unknown,
         No,
-        DependingOnTargetForFacebook,
+        DependingOnTargetWithSliderRole,
         DependingOnTargetFor_mybinder_org,
         Yes,
     };
